codex done 3